--- a/AddProduct.xaml
+++ b/AddProduct.xaml
@@ -7,8 +7,40 @@
         mc:Ignorable="d"
         Title="AddProduct" Height="450" Width="800">
     <Canvas Background="#FF39673E">
-        <ListBox x:Name="lbProduct" Height="369" Width="344" d:ItemsSource="{d:SampleData ItemCount=5}" Canvas.Left="424" Canvas.Top="33" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Button x:Name="btnTestProduct" Content="Test Add&#xD;&#xA;" Canvas.Left="95" Canvas.Top="190" Height="67" Width="171" Click="btnTestProduct_Click"/>
+        <ListBox x:Name="lbProduct" Height="402" Width="344" d:ItemsSource="{d:SampleData ItemCount=5}" Canvas.Left="446" Canvas.Top="11" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Button x:Name="btnTestProduct" Content="Test Add&#xD;&#xA;" Canvas.Left="113" Canvas.Top="335" Height="67" Width="171" Click="btnTestProduct_Click"/>
+        <TextBox x:Name="txtPrice" Canvas.Left="91" TextWrapping="Wrap" Canvas.Top="49" Width="179" HorizontalAlignment="Center" VerticalAlignment="Top" Height="26"/>
+        <TextBox x:Name="txtPoints" Canvas.Left="91" TextWrapping="Wrap" Canvas.Top="89" Width="179" HorizontalAlignment="Center" VerticalAlignment="Top" Height="26"/>
+        <TextBox x:Name="txtName" Canvas.Left="91" TextWrapping="Wrap" Canvas.Top="10" Width="179" HorizontalAlignment="Left" VerticalAlignment="Top" Height="26"/>
+        <Canvas Height="92" Width="271" Canvas.Left="11" Canvas.Top="128" Background="#FFCC6767" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+            <Canvas.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform AngleX="0.579"/>
+                    <RotateTransform/>
+                    <TranslateTransform X="0.606"/>
+                </TransformGroup>
+            </Canvas.RenderTransform>
+            <ComboBox x:Name="cbSize" Canvas.Left="67" Canvas.Top="10" Width="194" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <Button x:Name="btnTea" Content="Tea" Canvas.Left="69" Canvas.Top="45" HorizontalAlignment="Left" VerticalAlignment="Center" Width="76" Height="30" Click="btnTea_Click"/>
+            <Button x:Name="btnCoffee" Content="Coffee" Canvas.Left="176" Canvas.Top="45" Width="77" Height="30" HorizontalAlignment="Left" VerticalAlignment="Center" Click="btnCoffee_Click"/>
+            <Label Content="SIZE" Canvas.Left="10" Canvas.Top="4" Height="34" Width="39" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        </Canvas>
+        <Label Content="Name" Canvas.Left="10" Canvas.Top="6" HorizontalAlignment="Center" Height="34" VerticalAlignment="Top" Width="58" FontSize="16"/>
+        <Label Content="Price" Canvas.Left="10" Canvas.Top="45" HorizontalAlignment="Center" VerticalAlignment="Top" Width="58" Height="35" RenderTransformOrigin="0.529,1.035" FontSize="16"/>
+        <Label Content="Points" Canvas.Left="10" Canvas.Top="85" HorizontalAlignment="Center" VerticalAlignment="Top" Height="34" Width="58" FontSize="16"/>
+        <Canvas Height="92" Width="271" Canvas.Left="11" Canvas.Top="230" Background="#FFCC6767" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Canvas.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform AngleX="0.579"/>
+                    <RotateTransform/>
+                    <TranslateTransform X="0.606"/>
+                </TransformGroup>
+            </Canvas.RenderTransform>
+            <Button x:Name="btnBreakfast" Content="Breakfast" Canvas.Left="69" Canvas.Top="45" HorizontalAlignment="Left" VerticalAlignment="Center" Width="76" Height="30"/>
+            <Button x:Name="btnLunch" Content="Lunch" Canvas.Left="176" Canvas.Top="45" Width="77" Height="30" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        </Canvas>
 
     </Canvas>
 </Window>
